# Lab_1

./: CMakeLists copy.txt  CMakeLists.txt
include/: closest_pair_tonum.h
src/: closest_pair_tonum.cpp  main.cpp
test/: test_closest_pair.cpp
